# Flutter-pdf-editor

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle  google-services.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: main.dart
lib/auth/auth_service/: auth_exceptions.dart  auth_service.dart  firebase_auth_provider.dart
lib/auth/bloc/: auth_bloc.dart  auth_event.dart  auth_state.dart
lib/auth/services/: auth_exceptions.dart  auth_provider.dart  auth_service.dart  auth_user.dart  firebase_auth_provider.dart
lib/auth/views/: error_messages.dart  navigator.dart
lib/bloc/: app_bloc.dart  app_events.dart  app_states.dart
lib/crud/pdf_db_manager/: pdf_db_manager.dart  pdf_files_manager.dart
lib/crud/pdf_manipulator/: exceptions.dart  (+1 more)
lib/generics/: generic_button.dart
lib/pdf_renderer/: data.dart  renderer.dart
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: GoogleService-Info.plist
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
rust/src/api/: interface.rs  pdf_renderer.rs
rust/src/api/interface/: pdf_renderer.rs  pdfium.rs
rust/src/api/pdf_renderer/: constants.rs  data.rs  errors.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+181 files in other folders)
